Salvando notebook testes

--- a/resumo_balanço_patrimonial_investsite.ipynb
+++ b/resumo_balanço_patrimonial_investsite.ipynb
@@ -254,7 +254,49 @@
       "Tempo de execução da ação BBAS3: 2.28 minutos\n",
       "Execucao da BBDC3 do setor financeiro.\n",
       "Tempo de execução da ação BBDC3: 2.33 minutos\n",
-      "Execucao da BBDC4 do setor financeiro.\n"
+      "Execucao da BBDC4 do setor financeiro.\n",
+      "Tempo de execução da ação BBDC4: 2.36 minutos\n",
+      "Execucao da BBSE3 do setor financeiro.\n",
+      "Tempo de execução da ação BBSE3: 1.14 minutos\n",
+      "Execucao da BEEF3.\n",
+      "Tempo de execução da ação BEEF3: 2.04 minutos\n",
+      "Execucao da BPAC11 do setor financeiro.\n",
+      "Tempo de execução da ação BPAC11: 1.40 minutos\n",
+      "Execucao da BRAP4.\n",
+      "Tempo de execução da ação BRAP4: 2.80 minutos\n",
+      "Execucao da BRFS3.\n",
+      "Tempo de execução da ação BRFS3: 2.74 minutos\n",
+      "Execucao da BRKM5.\n",
+      "Tempo de execução da ação BRKM5: 2.65 minutos\n",
+      "Execucao da CCRO3.\n",
+      "Tempo de execução da ação CCRO3: 2.99 minutos\n",
+      "Execucao da CIEL3.\n",
+      "Tempo de execução da ação CIEL3: 1.76 minutos\n",
+      "Execucao da CMIG4.\n",
+      "Tempo de execução da ação CMIG4: 2.76 minutos\n",
+      "Execucao da COGN3.\n",
+      "Tempo de execução da ação COGN3: 3.05 minutos\n",
+      "Execucao da CPFE3.\n",
+      "Tempo de execução da ação CPFE3: 2.85 minutos\n",
+      "Execucao da CRFB3.\n",
+      "Tempo de execução da ação CRFB3: 0.95 minutos\n",
+      "Execucao da CSAN3.\n",
+      "Tempo de execução da ação CSAN3: 2.28 minutos\n",
+      "Execucao da CSNA3.\n",
+      "Tempo de execução da ação CSNA3: 2.86 minutos\n",
+      "Execucao da CVCB3.\n",
+      "Tempo de execução da ação CVCB3: 1.37 minutos\n",
+      "Execucao da CYRE3.\n",
+      "Tempo de execução da ação CYRE3: 3.25 minutos\n",
+      "Execucao da ECOR3.\n",
+      "Tempo de execução da ação ECOR3: 2.45 minutos\n",
+      "Execucao da EGIE3.\n",
+      "Tempo de execução da ação EGIE3: 2.84 minutos\n",
+      "Execucao da ELET3.\n",
+      "Tempo de execução da ação ELET3: 2.88 minutos\n",
+      "Execucao da ELET6.\n",
+      "Tempo de execução da ação ELET6: 2.82 minutos\n",
+      "Execucao da EMBR3.\n"
      ]
     }
    ],
