Criando funcao para o dre

--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "class TabelaResumoDataScraper:\n",
+    "class DREDataScraper:\n",
     "    def __init__(self, setor_financeiro, options, service,acoes,diretorio=None):\n",
     "        self.setor_financeiro = setor_financeiro\n",
     "        self.options = options\n",
@@ -33,7 +33,7 @@
     "    def obter_datas(self, navegador):\n",
     "        while True:\n",
     "            try:\n",
-    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_bp\"]/thead/tr/th[2]/select')\n",
+    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_dre_3meses\"]/thead/tr/th[2]/select/option')\n",
     "                datas = [elemento.text for elemento in elementos_data]\n",
     "                if len(datas) == 1:\n",
     "                    string_de_datas = datas[0]\n",
@@ -45,11 +45,11 @@
     "    def obter_dados_tabela(self, navegador, data):\n",
     "        while True:\n",
     "            try:\n",
-    "                select_element = navegador.find_element(By.XPATH, '/html/body/div[1]/div[4]/div[2]/div[2]/div[3]/table/thead/tr/th[2]/select')\n",
+    "                select_element = navegador.find_element(By.XPATH, '/html/body/div[1]/div[4]/div[2]/div[1]/div[3]/table[2]/thead/tr/th[2]/select')\n",
     "                select = Select(select_element)\n",
     "                select.select_by_visible_text(data)\n",
     "\n",
-    "                tabela = navegador.find_element(By.ID, 'pagina_empresa_bp')\n",
+    "                tabela = navegador.find_element(By.ID, 'tabela_resumo_empresa_dre_3meses')\n",
     "                linhas = tabela.find_elements(By.TAG_NAME, 'tr')\n",
     "\n",
     "                lista_resumo_balanco = []\n",
@@ -65,29 +65,22 @@
     "    def coletar_dados_financeiros(self, navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'caixa_equivalentes_caixa': [np.nan] * len(datas),\n",
-    "            'ativo_total': [],\n",
-    "            'divida_curto_prazo': [np.nan] * len(datas),\n",
-    "            'divida_longo_prazo': [np.nan] * len(datas),\n",
-    "            'divida_bruta': [np.nan] * len(datas),\n",
-    "            'divida_liquida': [np.nan] * len(datas),\n",
-    "            'patrimonio_liquido': [],\n",
-    "            'valor_patrimonial_acao': [],\n",
-    "            'acoes_ordinarias': [],\n",
-    "            'acoes_preferenciais': [],\n",
-    "            'total': []\n",
+    "            'receita_liquida': [],\n",
+    "            'resultado_bruto': [],\n",
+    "            'ebit': [np.nan] * len(datas),\n",
+    "            'depreciacao_amortizacao': [np.nan] * len(datas),\n",
+    "            'ebitda': [np.nan] * len(datas),\n",
+    "            'lucro_liquido': [],\n",
+    "            'lucro_por_acao': [np.nan] * len(datas)\n",
     "        }\n",
     "        for data in datas:\n",
     "            while True:\n",
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['ativo_total'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['patrimonio_liquido'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['valor_patrimonial_acao'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
-    "            dados['acoes_ordinarias'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
-    "            dados['acoes_preferenciais'].append(lista_resumo_balanco[9].replace('R$','').replace(',','.').strip())\n",
-    "            dados['total'].append(lista_resumo_balanco[11].replace('R$','').replace(',','.').strip())\n",
+    "            dados['receita_liquida'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['resultado_bruto'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "            dados['lucro_liquido'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "        \n",
@@ -96,17 +89,13 @@
     "    def coletar_dados_nao_financeiros(self,navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'caixa_equivalentes_caixa': [],\n",
-    "            'ativo_total': [],\n",
-    "            'divida_curto_prazo': [],\n",
-    "            'divida_longo_prazo': [],\n",
-    "            'divida_bruta': [],\n",
-    "            'divida_liquida': [],\n",
-    "            'patrimonio_liquido': [],\n",
-    "            'valor_patrimonial_acao': [],\n",
-    "            'acoes_ordinarias': [],\n",
-    "            'acoes_preferenciais': [],\n",
-    "            'total': []\n",
+    "            'receita_liquida': [],\n",
+    "            'resultado_bruto': [],\n",
+    "            'ebit': [],\n",
+    "            'depreciacao_amortizacao': [],\n",
+    "            'ebitda': [],\n",
+    "            'lucro_liquido': [],\n",
+    "            'lucro_por_acao': []\n",
     "        }\n",
     "\n",
     "        for data in datas:\n",
@@ -114,17 +103,13 @@
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['caixa_equivalentes_caixa'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['ativo_total'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['divida_curto_prazo'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
-    "            dados['divida_longo_prazo'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
-    "            dados['divida_bruta'].append(lista_resumo_balanco[9].replace('R$','').replace(',','.').strip())\n",
-    "            dados['divida_liquida'].append(lista_resumo_balanco[11].replace('R$','').replace(',','.').strip())\n",
-    "            dados['patrimonio_liquido'].append(lista_resumo_balanco[13].replace('R$','').replace(',','.').strip())\n",
-    "            dados['valor_patrimonial_acao'].append(lista_resumo_balanco[15].replace('R$','').replace(',','.').strip())\n",
-    "            dados['acoes_ordinarias'].append(lista_resumo_balanco[17].replace('R$','').replace(',','.').strip())\n",
-    "            dados['acoes_preferenciais'].append(lista_resumo_balanco[19].replace('R$','').replace(',','.').strip())\n",
-    "            dados['total'].append(lista_resumo_balanco[21].replace('R$','').replace(',','.').strip())\n",
+    "            dados['receita_liquida'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['resultado_bruto'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "            dados['ebit'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
+    "            dados['depreciacao_amortacao'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['ebitda'].append(lista_resumo_balanco[9].replace('R$','').replace(',','.').strip())\n",
+    "            dados['lucro_liquido'].append(lista_resumo_balanco[11].replace('R$','').replace(',','.').strip())\n",
+    "            dados['lucro_por_acao'].append(lista_resumo_balanco[13].replace('R$','').replace(',','.').strip())\n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "            \n",
@@ -133,47 +118,61 @@
     "    def rodar_acoes(self):\n",
     "        iteracao = 0\n",
     "        lista_dataframes = []\n",
+    "        acoes_processadas = set()\n",
     "        for acao in self.acoes:\n",
     "            start_time = time.time()\n",
+    "            \n",
     "            navegador = self.navegador_get(acao=acao)\n",
     "            \n",
-    "            datas = self.obter_datas(navegador=navegador)\n",
+    "            elemento_text = navegador.find_elements(By.XPATH, '/html/body/div[1]/div[4]/div[2]') \n",
     "            \n",
-    "            if acao in self.setor_financeiro:\n",
-    "                df_resumo_balanco = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
-    "                colunas = ['ativo_total', 'patrimonio_liquido']\n",
-    "                for col in colunas:\n",
-    "                    df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
+    "            if acao in acoes_processadas:\n",
+    "                print(f\"Ação {acao} já processada, pulando.\") \n",
+    "                 \n",
+    "            elif 'código de negociação não encontrado.' in elemento_text[0].text:   \n",
+    "                print(f\"Código de negociação {acao} não encontrado.\")\n",
+    "            \n",
     "            else:\n",
-    "                df_resumo_balanco = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas)  \n",
-    "                colunas = ['caixa_equivalentes_caixa', 'ativo_total', 'divida_liquida','divida_curto_prazo', 'divida_longo_prazo', 'divida_bruta', 'patrimonio_liquido']\n",
-    "                for col in colunas:\n",
-    "                    df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
-    "                  \n",
-    "            df_resumo_balanco['tic'] = acao\n",
-    "            lista_dataframes.append(df_resumo_balanco)\n",
-    "\n",
-    "            iteracao += 1\n",
     "            \n",
-    "            if iteracao % 5 == 0:\n",
-    "                self.salvar_dados(lista_dataframes=lista_dataframes)\n",
+    "                datas = self.obter_datas(navegador=navegador)\n",
     "                \n",
-    "            end_time = time.time()\n",
+    "                if acao in self.setor_financeiro:\n",
+    "                    df_resumo_balanco = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
+    "                    colunas = ['receita_liquida', 'resultado_bruto', 'lucro_liquido']\n",
+    "                    for col in colunas:\n",
+    "                        df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
+    "                else:\n",
+    "                    df_resumo_balanco = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas)  \n",
+    "                    colunas = df_resumo_balanco.columns[(df_resumo_balanco.columns != 'data') & (df_resumo_balanco.columns != 'lucro_por_acao') & (df_resumo_balanco.columns != 'tic')]\n",
+    "                    for col in colunas:\n",
+    "                        df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
+    "                    \n",
+    "                df_resumo_balanco['tic'] = acao\n",
+    "                lista_dataframes.append(df_resumo_balanco)\n",
     "\n",
-    "            # Calcula o tempo decorrido em segundos\n",
-    "            execution_time_seconds = end_time - start_time\n",
+    "                iteracao += 1\n",
+    "                \n",
+    "                if iteracao % 5 == 0:\n",
+    "                    self.salvar_dados(lista_dataframes=lista_dataframes)\n",
+    "                    \n",
+    "                end_time = time.time()\n",
     "\n",
-    "            # Calcula o tempo decorrido em minutos\n",
-    "            execution_time_minutes = execution_time_seconds / 60\n",
+    "                # Calcula o tempo decorrido em segundos\n",
+    "                execution_time_seconds = end_time - start_time\n",
     "\n",
-    "            # Imprime o tempo de execução em minutos\n",
-    "            print(f\"Tempo de execução da ação {acao}: {execution_time_minutes:.2f} minutos\")\n",
+    "                # Calcula o tempo decorrido em minutos\n",
+    "                execution_time_minutes = execution_time_seconds / 60\n",
+    "\n",
+    "                # Imprime o tempo de execução em minutos\n",
+    "                print(f\"Tempo de execução da ação {acao}: {execution_time_minutes:.2f} minutos\")\n",
+    "            \n",
+    "            acoes_processadas.add(acao) \n",
     "                \n",
     "        return pd.concat(lista_dataframes)\n",
     "\n",
     "    def salvar_dados(self,lista_dataframes):\n",
     "        if self.diretorio is None:\n",
-    "            self.diretorio = 'dados/resumo_balanco.csv'\n",
+    "            self.diretorio = 'dados/dre.csv'\n",
     "        pd.concat(lista_dataframes).to_csv(self.diretorio)\n",
     "\n",
     "    def converter_valor(self,valor):\n",
