--- a/Notebooks/dre_trimestre_investsite.ipynb
+++ b/Notebooks/dre_trimestre_investsite.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "aaea4770-6777-4684-a9dd-7cd5d6e3d832",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "44766a7f-3bde-46fb-bfd2-23e6d1f00e0c",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a1ba9072-311f-4d7f-8ba9-a03311f748af",
    "metadata": {
     "tags": []
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8e6e1de0-f2ec-41c9-9d23-3a190934e87e",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5f8aee7e-36b0-4aa5-8cc2-df99a7e34ae7",
    "metadata": {
     "tags": []
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6b48a07a-49f9-4b1e-ab23-b77fea792b40",
    "metadata": {
     "tags": []
@@ -176,13 +176,13 @@
      "output_type": "stream",
      "text": [
       "Execucao da ABEV3\n",
-      "Tempo de execução da ação ABEV3: 1.24 minutos\n",
+      "Tempo de execução da ação ABEV3: 1.06 minutos\n",
       "Execucao da AZUL4\n",
-      "Tempo de execução da ação AZUL4: 0.78 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.68 minutos\n",
       "Execucao da B3SA3\n",
-      "Tempo de execução da ação B3SA3: 1.72 minutos\n",
+      "Tempo de execução da ação B3SA3: 1.49 minutos\n",
       "Execucao da BBDC4 do setor financeiro.\n",
-      "Tempo de execução da ação BBDC4: 2.82 minutos\n"
+      "Tempo de execução da ação BBDC4: 2.00 minutos\n"
      ]
     }
    ],
@@ -350,216 +350,34 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "634be698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_resumo_balanco = pd.concat(lista_dataframes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "cedd063c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>receita_liquida</th>\n",
-       "      <th>resultado_bruto</th>\n",
-       "      <th>ebit</th>\n",
-       "      <th>depreciacao_amortizacao</th>\n",
-       "      <th>ebitida</th>\n",
-       "      <th>lucro_liquido</th>\n",
-       "      <th>lucro_por_acao</th>\n",
-       "      <th>tic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-03-31</td>\n",
-       "      <td>20280.00</td>\n",
-       "      <td>10220.00</td>\n",
-       "      <td>4880.00</td>\n",
-       "      <td>-1570.0</td>\n",
-       "      <td>6450.0</td>\n",
-       "      <td>3700.00</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>19990.00</td>\n",
-       "      <td>10690.00</td>\n",
-       "      <td>5430.00</td>\n",
-       "      <td>-1400.0</td>\n",
-       "      <td>6820.0</td>\n",
-       "      <td>4390.00</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-09-30</td>\n",
-       "      <td>20320.00</td>\n",
-       "      <td>10090.00</td>\n",
-       "      <td>4900.00</td>\n",
-       "      <td>-1590.0</td>\n",
-       "      <td>6480.0</td>\n",
-       "      <td>3910.00</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-30</td>\n",
-       "      <td>18900.00</td>\n",
-       "      <td>9260.00</td>\n",
-       "      <td>3450.00</td>\n",
-       "      <td>-1580.0</td>\n",
-       "      <td>5020.0</td>\n",
-       "      <td>2500.00</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-03-31</td>\n",
-       "      <td>20530.00</td>\n",
-       "      <td>10400.00</td>\n",
-       "      <td>4880.00</td>\n",
-       "      <td>-1460.0</td>\n",
-       "      <td>6330.0</td>\n",
-       "      <td>3700.00</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>ABEV3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>2009-06-30</td>\n",
-       "      <td>378.24</td>\n",
-       "      <td>378.24</td>\n",
-       "      <td>250.04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>188.13</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>2009-03-31</td>\n",
-       "      <td>316.55</td>\n",
-       "      <td>316.55</td>\n",
-       "      <td>167.79</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>226.98</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>2008-12-31</td>\n",
-       "      <td>370.44</td>\n",
-       "      <td>370.44</td>\n",
-       "      <td>69.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>115.39</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>2008-09-30</td>\n",
-       "      <td>404.68</td>\n",
-       "      <td>404.68</td>\n",
-       "      <td>97.46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>200.97</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>2008-06-30</td>\n",
-       "      <td>826.90</td>\n",
-       "      <td>826.90</td>\n",
-       "      <td>386.98</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>329.24</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>B3SA3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>140 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          data  receita_liquida  resultado_bruto     ebit  \\\n",
-       "0   2024-03-31         20280.00         10220.00  4880.00   \n",
-       "1   2023-12-31         19990.00         10690.00  5430.00   \n",
-       "2   2023-09-30         20320.00         10090.00  4900.00   \n",
-       "3   2023-06-30         18900.00          9260.00  3450.00   \n",
-       "4   2023-03-31         20530.00         10400.00  4880.00   \n",
-       "..         ...              ...              ...      ...   \n",
-       "59  2009-06-30           378.24           378.24   250.04   \n",
-       "60  2009-03-31           316.55           316.55   167.79   \n",
-       "61  2008-12-31           370.44           370.44    69.50   \n",
-       "62  2008-09-30           404.68           404.68    97.46   \n",
-       "63  2008-06-30           826.90           826.90   386.98   \n",
-       "\n",
-       "    depreciacao_amortizacao  ebitida  lucro_liquido lucro_por_acao    tic  \n",
-       "0                   -1570.0   6450.0        3700.00           0.23  ABEV3  \n",
-       "1                   -1400.0   6820.0        4390.00           0.28  ABEV3  \n",
-       "2                   -1590.0   6480.0        3910.00           0.25  ABEV3  \n",
-       "3                   -1580.0   5020.0        2500.00           0.16  ABEV3  \n",
-       "4                   -1460.0   6330.0        3700.00           0.23  ABEV3  \n",
-       "..                      ...      ...            ...            ...    ...  \n",
-       "59                      NaN      NaN         188.13           0.09  B3SA3  \n",
-       "60                      NaN      NaN         226.98           0.11  B3SA3  \n",
-       "61                      NaN      NaN         115.39           0.06  B3SA3  \n",
-       "62                      NaN      NaN         200.97           0.10  B3SA3  \n",
-       "63                      NaN      NaN         329.24           0.16  B3SA3  \n",
-       "\n",
-       "[140 rows x 9 columns]"
+       "Index(['receita_liquida', 'resultado_bruto', 'ebit', 'depreciacao_amortizacao',\n",
+       "       'ebitida', 'lucro_liquido'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.concat(lista_dataframes)"
+    "df_resumo_balanco.columns[(df_resumo_balanco.columns != 'data') & (df_resumo_balanco.columns != 'lucro_por_acao') & (df_resumo_balanco.columns != 'tic')]"
    ]
   },
   {
