--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "            dados['receita_liquida'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
     "            dados['resultado_bruto'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
     "            dados['ebit'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
-    "            dados['depreciacao_amortacao'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['depreciacao_amortizacao'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
     "            dados['ebitda'].append(lista_resumo_balanco[9].replace('R$','').replace(',','.').strip())\n",
     "            dados['lucro_liquido'].append(lista_resumo_balanco[11].replace('R$','').replace(',','.').strip())\n",
     "            dados['lucro_por_acao'].append(lista_resumo_balanco[13].replace('R$','').replace(',','.').strip())\n",
@@ -120,8 +120,6 @@
     "        lista_dataframes = []\n",
     "        acoes_processadas = set()\n",
     "        for acao in self.acoes:\n",
-    "            start_time = time.time()\n",
-    "            \n",
     "            navegador = self.navegador_get(acao=acao)\n",
     "            \n",
     "            elemento_text = navegador.find_elements(By.XPATH, '/html/body/div[1]/div[4]/div[2]') \n",
@@ -133,22 +131,28 @@
     "                print(f\"Código de negociação {acao} não encontrado.\")\n",
     "            \n",
     "            else:\n",
+    "                start_time = time.time()\n",
     "            \n",
     "                datas = self.obter_datas(navegador=navegador)\n",
-    "                \n",
+    "\n",
     "                if acao in self.setor_financeiro:\n",
-    "                    df_resumo_balanco = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
-    "                    colunas = ['receita_liquida', 'resultado_bruto', 'lucro_liquido']\n",
-    "                    for col in colunas:\n",
-    "                        df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
+    "                    df_dre = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
+    "                    colunas_selecionadas = df_dre.columns[(df_dre.columns != 'datas') & \n",
+    "                                    (df_dre.columns != 'lucro_por_acao') &\n",
+    "                                    (df_dre.columns != 'ebit') &   \n",
+    "                                    (df_dre.columns != 'depreciacao_amortizacao') & \n",
+    "                                    (df_dre.columns != 'lucro_por_acao') &\n",
+    "                                    (df_dre.columns != 'ebitida') &  \n",
+    "                                    (df_dre.columns != 'lucro_por_acao')]\n",
+    "                    for col in colunas_selecionadas:\n",
+    "                        df_dre[col] = df_dre[col].apply(self.converter_valor)\n",
     "                else:\n",
-    "                    df_resumo_balanco = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas)  \n",
-    "                    colunas = df_resumo_balanco.columns[(df_resumo_balanco.columns != 'data') & (df_resumo_balanco.columns != 'lucro_por_acao') & (df_resumo_balanco.columns != 'tic')]\n",
-    "                    for col in colunas:\n",
-    "                        df_resumo_balanco[col] = df_resumo_balanco[col].apply(self.converter_valor)\n",
+    "                    df_dre = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas) \n",
+    "                    for col in df_dre.columns[(df_dre.columns != 'datas') & (df_dre.columns != 'lucro_por_acao') & (df_dre.columns != 'tic')]:\n",
+    "                        df_dre[col] = df_dre[col].apply(self.converter_valor)\n",
     "                    \n",
-    "                df_resumo_balanco['tic'] = acao\n",
-    "                lista_dataframes.append(df_resumo_balanco)\n",
+    "                df_dre['tic'] = acao\n",
+    "                lista_dataframes.append(df_dre)\n",
     "\n",
     "                iteracao += 1\n",
     "                \n",
@@ -195,21 +199,53 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium.common.exceptions import UnexpectedAlertPresentException, NoSuchElementException\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'TabelaResumoDataScraper' from 'StockBrazil.BalancoPatrimonial' (/workspaces/fundamentalist-stock-brazil/StockBrazil/BalancoPatrimonial.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mStockBrazil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mBalancoPatrimonial\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TabelaResumoDataScraper\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'TabelaResumoDataScraper' from 'StockBrazil.BalancoPatrimonial' (/workspaces/fundamentalist-stock-brazil/StockBrazil/BalancoPatrimonial.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução da ação ABEV3: 0.80 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.42 minutos\n",
+      "Tempo de execução da ação B3SA3: 1.03 minutos\n",
+      "Tempo de execução da ação BBAS3: 1.18 minutos\n",
+      "Tempo de execução da ação BBDC3: 1.14 minutos\n",
+      "Tempo de execução da ação BBDC4: 1.18 minutos\n",
+      "Tempo de execução da ação BBSE3: 0.50 minutos\n",
+      "Tempo de execução da ação BEEF3: 0.92 minutos\n",
+      "Tempo de execução da ação BPAC11: 0.62 minutos\n",
+      "Tempo de execução da ação BRAP4: 2.82 minutos\n"
      ]
     }
    ],
    "source": [
-    "from StockBrazil.BalancoPatrimonial import TabelaResumoDataScraper"
+    "codigos_ibovespa = [\n",
+    "    'ABEV3', 'AZUL4', 'B3SA3', 'BBAS3', 'BBDC3', 'BBDC4', 'BBSE3', 'BEEF3', 'BPAC11', 'BRAP4',]\n",
+    "setor_financeiro = {'BBAS3', 'BBDC3', 'BBDC4', 'BBSE3', 'ITUB4', 'BPAC11', 'ITUB4', 'SANB11', 'IRBR3'}\n",
+    "\n",
+    "\n",
+    "chrome_driver_path = \"/usr/bin/chromedriver\"\n",
+    "service = Service(executable_path=chrome_driver_path)\n",
+    "\n",
+    "options = Options()\n",
+    "options.add_argument(\"--headless\")  # Executar em modo headless\n",
+    "options.add_argument(\"--no-sandbox\")\n",
+    "options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "options.add_argument(\"--disable-dev-shm-usage\")  # Reduz o uso de memória\n",
+    "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
+    "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
+    "\n",
+    "scraper = DREDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)\n",
+    "\n",
+    "dados = scraper.rodar_acoes()\n"
    ]
   },
   {
@@ -243,28 +279,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'StockBrazil.BalancoPatrimonial' has no attribute 'TabelaResumoDataScraper'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m scraper \u001b[38;5;241m=\u001b[39m \u001b[43mBalancoPatrimonial\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTabelaResumoDataScraper\u001b[49m(setor_financeiro, options, service,acoes\u001b[38;5;241m=\u001b[39mcodigos_ibovespa)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'StockBrazil.BalancoPatrimonial' has no attribute 'TabelaResumoDataScraper'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "scraper = BalancoPatrimonial.TabelaResumoDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -282,6 +296,7 @@
    ],
    "source": [
     "# Uso da classe\n",
+    "from FundamentsStockBrazil.BalanceSheet import TabelaResumoDataScraper\n",
     "setor_financeiro = {'BBAS3', 'BBDC3', 'BBDC4', 'BBSE3', 'ITUB4', 'BPAC11', 'ITUB4', 'SANB11', 'IRBR3'}\n",
     "\n",
     "chrome_driver_path = \"/usr/bin/chromedriver\"\n",
