--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -6,21 +6,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tempo de execução da ação ABEV3: 1.11 minutos\n",
-      "Ação ABEV3 já processada, pulando.\n",
-      "Tempo de execução da ação AZUL4: 0.72 minutos\n",
-      "Tempo de execução da ação ITUB4: 2.36 minutos\n",
-      "Código de negociação bbbbbb não encontrado.\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DreDataScraper' from 'FundamentsStockBrazil.IncomeStatement' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/IncomeStatement.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFundamentsStockBrazil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mIncomeStatement\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DreDataScraper\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Options\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DreDataScraper' from 'FundamentsStockBrazil.IncomeStatement' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/IncomeStatement.py)"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from StockBrazil.BalancoPatrimonial import TabelaResumoDataScraper\n",
+    "from FundamentsStockBrazil.IncomeStatement import DreDataScraper\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
@@ -42,11 +42,11 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = TabelaResumoDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/resumo_balanco.csv')\n",
+    "scraper = DreDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/dre.csv')\n",
     "\n",
     "dados = scraper.rodar_acoes()\n",
     "\n",
-    "dados.to_csv('../dados/resumo_balanco.csv')"
+    "dados.to_csv('../dados/dre.csv')"
    ]
   },
   {
